--- a/MadridShops-Pro/Info.plist
+++ b/MadridShops-Pro/Info.plist
@@ -46,5 +46,7 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Necesitamos acceder a su localización para mostrarle las tiendas más cercanas.</string>
 </dict>
 </plist>
